--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "concurrently \"npm run client\" \"npm run server\"",
     "client": "cd Client && yarn dev",
-    "server": "cd Server && nodemon server.js"
+    "server": "cd Server && nodemon server.js",
+    "build": "cd Client && yarn build && cd ../Server && yarn build"
   },
   "keywords": [],
   "author": "",
