--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "concurrently \"npm run client\" \"npm run server\"",
     "client": "cd Client && yarn dev",
     "server": "cd Server && nodemon server.js",
-    "build": "cd Client && yarn build && cd ../Server && yarn build"
+    "build": "cd Client && yarn build && cd ../Server && yarn build",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
